changed text colour to be true to the design document and fixed accordion spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@
   --bs-dark-rgb: 33, 37, 41;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
-  --bs-body-color-rgb: 33, 37, 41;
+  --bs-body-color-rgb: 35, 31, 32;
   --bs-body-bg-rgb: 255, 255, 255;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -232,6 +232,10 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   background-color: #e5640f;
 }
 
+.text-black {
+  color: #231F20;
+}
+
 abbr[title],
 abbr[data-bs-original-title] {
   -webkit-text-decoration: underline dotted;
@@ -310,7 +314,7 @@ sup {
 }
 
 a {
-  color: #1a9bf0;
+  color: #231F20;
   text-decoration: underline;
 }
 a:hover {
